# simplemap-xblock

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
simplemap/: __init__.py  simplemap.py
simplemap/public/: simplemap.html
simplemap/static/: simplemap.html
src/: EditorUtil.ts  Marker.tsx  MarkerEditor.tsx  SimpleMap.tsx  handlers.tsx  index.css  index.tsx
